      the docs due to recent confusion over this 
      feature.
     
    - Removed badly out of date 'polymorphic_fetch'
      and 'select_table' docs from inheritance, 
      reworked the second half of "joined table
      inheritance".
      
    - Documented `comparator_factory` kwarg, added
      new doc section "Custom Comparators".
    
- mssql
    - Added collation support through the use of a new collation
      argument. This is supported on the following types: char,
      nchar, varchar, nvarchar, text, ntext. [ticket:1248]

    - Changes to the connection string parameters favor DSN as the
      default specification for pyodbc. See the mssql.py docstring
      for detailed usage instructions.

    - Added experimental support of savepoints. It
      currently does not work fully with sessions.

    - Support for three levels of column nullability: NULL,
      NOT NULL, and the database's configured default.  The default
      Column configuration (nullable=True) will now generate NULL
      in the DDL. Previously no specification was emitted and the
      database default would take effect (usually NULL, but not
      always).  To explicitly request the database default,
      configure columns with nullable=None and no specification
      will be emitted in DDL. This is backwards incompatible
      behavior. [ticket:1243]

- postgres
    - Calling alias.execute() in conjunction with
      server_side_cursors won't raise AttributeError.

    - Added Index reflection support to Postgres, using a
      great patch we long neglected, submitted by 
      Ken Kuhlman. [ticket:714]

- oracle
    - Adjusted the format of create_xid() to repair
      two-phase commit.   We now have field reports
      of Oracle two-phase commit working properly
      with this change.

- mysql
    - Fixed bug in exception raise when FK columns not present
      during reflection. [ticket:1241]
      
- associationproxy